--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,39 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*
+{
+    user-select: none;
+}
+
+li {
+    list-style: none;
+    padding: 10px 20px;
+    border: 1px solid grey;
+    border-radius: 5px;
+    width: 100px;
+    display: inline-block;
+    margin: 5px;
+    background-color: #EAEAEA;
+    box-shadow: 1px 2px 1px 1px #ccc;
+    text-align: center;
+    font-weight: 550;
+    color:#3A3A3A;
+}
+
+li span{font-weight: 600; color: green;}
+li:hover{filter: brightness(104%);}
+li:active{filter: brightness(101%);}
+
+.search-console{text-align: center ;padding: 10px; margin: 10px 0px;}
+.search-console input{font-weight: 600; font-family: Proxima Nova; background-color: #F8F8F8;}
+.search-console input, button
+{
+    padding: 10px 30px;
+    border-radius: 5px;
+    border: 1px solid grey;
+    margin: 0px 10px;
+    color: green;
+    font-size: 18px;
+}
